--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // Swagger 의존성 추가(REST API 쓰면 꼭 따라오는 것)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
     runtimeOnly'com.h2database:h2'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
